.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
00:11:01 **** Incremental Build of configuration Debug for project Clase03bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase03bis.o" "..\\src\\Clase03bis.c" 
..\src\Clase03bis.c: In function 'main':
..\src\Clase03bis.c:43:18: warning: implicit declaration of function 'dividir'; did you mean 'dividr'? [-Wimplicit-function-declaration]
   43 |  retornoDivision=dividir(numeroUno,numeroDos,&resultadoDivision);
      |                  ^~~~~~~
      |                  dividr
..\src\Clase03bis.c: In function 'dividr':
..\src\Clase03bis.c:90:3: error: invalid type argument of unary '*' (have 'int')
   90 |   *retorno=(float)operador1/operador2;
      |   ^~~~~~~~
00:11:25 **** Incremental Build of configuration Debug for project Clase03bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase03bis.o" "..\\src\\Clase03bis.c" 
..\src\Clase03bis.c: In function 'main':
..\src\Clase03bis.c:43:18: warning: implicit declaration of function 'dividir'; did you mean 'dividr'? [-Wimplicit-function-declaration]
   43 |  retornoDivision=dividir(numeroUno,numeroDos,&resultadoDivision);
      |                  ^~~~~~~
      |                  dividr
..\src\Clase03bis.c: In function 'dividr':
..\src\Clase03bis.c:85:6: warning: unused variable 'retorno' [-Wunused-variable]
   85 |  int retorno;
      |      ^~~~~~~
gcc -o Clase03bis.exe "src\\Clase03bis.o" 
c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../../mingw32/bin/ld.exe: src\Clase03bis.o: in function `main':
C:\Users\Nacho\Desktop\Programacion\UTN\ProgramacionUno\Clase03bis\Debug/../src/Clase03bis.c:43: undefined reference to `dividir'
collect2.exe: error: ld returned 1 exit status
00:14:33 **** Incremental Build of configuration Debug for project Clase03bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase03bis.o" "..\\src\\Clase03bis.c" 
..\src\Clase03bis.c: In function 'main':
..\src\Clase03bis.c:43:18: warning: implicit declaration of function 'dividir'; did you mean 'dividr'? [-Wimplicit-function-declaration]
   43 |  retornoDivision=dividir(numeroUno,numeroDos,&resultadoDivision);
      |                  ^~~~~~~
      |                  dividr
gcc -o Clase03bis.exe "src\\Clase03bis.o" 
c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../../mingw32/bin/ld.exe: src\Clase03bis.o: in function `main':
C:\Users\Nacho\Desktop\Programacion\UTN\ProgramacionUno\Clase03bis\Debug/../src/Clase03bis.c:43: undefined reference to `dividir'
collect2.exe: error: ld returned 1 exit status
00:18:03 **** Incremental Build of configuration Debug for project Clase03bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase03bis.o" "..\\src\\Clase03bis.c" 
..\src\Clase03bis.c: In function 'main':
..\src\Clase03bis.c:43:18: warning: implicit declaration of function 'dividir'; did you mean 'dividr'? [-Wimplicit-function-declaration]
   43 |  retornoDivision=dividir(numeroUno,numeroDos,&resultadoDivision);
      |                  ^~~~~~~
      |                  dividr
gcc -o Clase03bis.exe "src\\Clase03bis.o" 
c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../../mingw32/bin/ld.exe: src\Clase03bis.o: in function `main':
C:\Users\Nacho\Desktop\Programacion\UTN\ProgramacionUno\Clase03bis\Debug/../src/Clase03bis.c:43: undefined reference to `dividir'
collect2.exe: error: ld returned 1 exit status
00:18:20 **** Incremental Build of configuration Debug for project Clase03bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase03bis.o" "..\\src\\Clase03bis.c" 
gcc -o Clase03bis.exe "src\\Clase03bis.o" 
Info: Nothing to build for Clase03bis
Info: Nothing to build for Clase03bis
00:23:00 **** Incremental Build of configuration Debug for project Clase03bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase03bis.o" "..\\src\\Clase03bis.c" 
gcc -o Clase03bis.exe "src\\Clase03bis.o" 
Info: Nothing to build for Clase03bis
00:23:37 **** Incremental Build of configuration Debug for project Clase03bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase03bis.o" "..\\src\\Clase03bis.c" 
gcc -o Clase03bis.exe "src\\Clase03bis.o" 
Info: Nothing to build for Clase03bis
Info: Nothing to build for Clase03bis
00:24:18 **** Incremental Build of configuration Debug for project Clase03bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase03bis.o" "..\\src\\Clase03bis.c" 
gcc -o Clase03bis.exe "src\\Clase03bis.o" 
Info: Nothing to build for Clase03bis
Info: Nothing to build for Clase03bis
00:25:06 **** Incremental Build of configuration Debug for project Clase03bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase03bis.o" "..\\src\\Clase03bis.c" 
gcc -o Clase03bis.exe "src\\Clase03bis.o" 
Info: Nothing to build for Clase03bis
